<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingVertical="100dp"
    tools:context=".view.home.">


    <ImageView
        android:id="@+id/tv_login_title"
        android:layout_width="333dp"
        android:layout_height="163dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
        android:hint="@string/user_string"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_title"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password_string"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:autofillHints="password"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="173dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#FFEB3B"
        android:text="Inicar Sesion"
        android:textAllCaps="false"
        android:textColor="#2A2929"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="165dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8BC34A"
        android:text="Unete!"
        android:textAllCaps="false"
        android:textColor="#2A2929"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

</androidx.constraintlayout.widget.ConstraintLayout>