...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/eliminarUsuario"
            android:layout_width="161dp"
            android:layout_height="54dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="13dp"
            android:backgroundTint="#E91E63"
            android:text="Eliminar Usuario"
            app:layout_constraintBottom_toTopOf="@+id/levelTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idUser" />

        <ImageView
            android:id="@+id/imageView4"
...
