...
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toEndOf="@+id/item_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="95dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:text="title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
